@@ -6,7 +6,7 @@ Last-Update: 2012-06-16
 
 --- a/okteta/kasten/controllers/CMakeLists.txt
 +++ b/okteta/kasten/controllers/CMakeLists.txt
-@@ -430,6 +430,15 @@ set( OKTETA_KASTEN_CONTROLLERS_SRCS
+@@ -463,6 +463,15 @@ set( OKTETA_KASTEN_CONTROLLERS_SRCS
    ${STRUCTVIEW_SRCS}
  )
  
@@ -22,7 +22,7 @@ Last-Update: 2012-06-16
  set( okteta_kastencontrollers_LIB_HDRS
    oktetakastencontrollers_export.h
    view/print/printcontroller.h
-@@ -477,10 +486,6 @@ set( okteta_kastencontrollers_LIB_HDRS
+@@ -512,10 +521,6 @@ set( okteta_kastencontrollers_LIB_HDRS
    view/stringsextract/stringsextracttoolviewfactory.h
    view/search/searchcontroller.h
    view/search/searchuserqueryable.h
@@ -33,7 +33,7 @@ Last-Update: 2012-06-16
    document/info/documentinfotoolview.h
    document/info/documentinfotool.h
    document/overwriteonly/overwriteonlycontroller.h
-@@ -518,7 +523,13 @@ install( FILES ${okteta_kastencontroller
+@@ -553,7 +558,13 @@ install( FILES ${okteta_kastencontroller
    DESTINATION ${OKTETAKASTEN_INCLUDE_INSTALL_DIR}
    COMPONENT Devel
  )
